# smithy-cargo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
smithy-cargo/: Cargo.toml
smithy-cargo-macros/: Cargo.toml
smithy-cargo-macros/src/: lib.rs
smithy-cargo/src/: lib.rs
src/: lib.rs
test-crate/: Cargo.toml  build.rs  smithy-build.json
test-crate/model/: main.smithy
test-crate/src/: lib.rs
test-crate/test-code-generator/: settings.gradle.kts
test-crate/test-code-generator/lib/: build.gradle.kts
test-crate/test-code-generator/lib/src/main/java/dev/hmellema/smithy/rust/test/: TestRustCodegenPlugin.java
