[package]
name = "smithy-cargo-macros"
description = "Macros for use alongside smithy-cargo build tool."
repository = "https://github.com/mellemahp/smithy-cargo"
publish = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
crabtime.workspace = true
walkdir.workspace = true
