[package]
name = "smithy-cargo"
description = "A library for Cargo build scripts to build Smithy models."
repository = "https://github.com/mellemahp/smithy-cargo"
publish = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
edition.workspace = true
version.workspace = true
