[package]
name = "test-crate"
description = "Crate that tests build tooling provided by smithy-cargo"
version.workspace = true
publish = false
edition.workspace = true

[dependencies]
smithy-cargo-macros.workspace = true
crabtime.workspace = true

[build-dependencies]
smithy-cargo.workspace = true

[lints.rust]
dead_code = "allow"